Fixed grammar error.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>BaneleShadrack_Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to BaneleSahdrack's Portfolio</h1>
+  <h1>Welcome to BaneleShadrack's Portfolio</h1>
 </body>
 </html>
