Added meta data and body data

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="device-width, initial-scale=1.0" />
+    <title>BS Portfolio Website Practice</title>
+    <links rel="stylesheets" href="style.css" />
+    <links rel="stylesheets" href="mediaqueries.css" />
+  </head>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo">Banele Shadrack</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">Home</a></li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#about">Project/Portfolio</a></li>
+          <li><a href="#about">Interests</a></li>
+          <li><a href="#about">Previous Experience</a></li>
+          <li><a href="#about">Skills</a></li>
+          <li><a href="#about">Contacts</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script src="script.js"></script>
+  </body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en>
-<head>
+ <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BaneleShadrack_Portfolio</title>
-</head>
-<body>
+  <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
   <h1>Welcome to BaneleShadrack's Portfolio</h1>
-</body>
+  <div id="header>"
+
+  </div>
+ </body>
 </html>
