Added html data for the header

--- a/index.html
+++ b/index.html
@@ -1,43 +1,27 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="device-width, initial-scale=1.0" />
-    <title>BS Portfolio Website Practice</title>
-    <links rel="stylesheets" href="style.css" />
-    <links rel="stylesheets" href="mediaqueries.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Banele_Shadrack: Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav id="desktop-nav">
-      <div class="logo">Banele Shadrack</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">Home</a></li>
-          <li><a href="#about">About me</a></li>
-          <li><a href="#about">Project/Portfolio</a></li>
-          <li><a href="#about">Interests</a></li>
-          <li><a href="#about">Previous Experience</a></li>
-          <li><a href="#about">Skills</a></li>
-          <li><a href="#about">Contacts</a></li>
-        </ul>
-      </div>
+    <nav>
+      <a href="#" class="logo"><span>Banele.Shadrack</span></a>
+      <ul class="links">
+        <a href="#About me">About me</a>
+        <a href="#Skills">Skills</a>
+        <a href="#Projects/Portfolio">Projects/Portfolio</a>
+        <a href="#Contacts">Contact</a>
+      </ul>
+      <i class="bx bx-menu" id="menu"></i>
+      <a href="#Contacts" class="button">Contact me</a>
     </nav>
     <script src="script.js"></script>
   </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en>
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BaneleShadrack_Portfolio</title>
-  <link rel="stylesheet" href="style.css">
- </head>
- <body>
-  <h1>Welcome to BaneleShadrack's Portfolio</h1>
-  <div id="header>"
-
-  </div>
- </body>
 </html>
