--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banele_Shadrack: Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -22,6 +22,27 @@
       <i class="bx bx-menu" id="menu"></i>
       <a href="#Contacts" class="button">Contact me</a>
     </nav>
+
+    <section id="home">
+      <img src="1.jpg" alt="" />
+      <div class="infoBox">
+        <h1><span>Hello, I am Banele</span></h1>
+        <h3><span>Web Developer</span> based in South Africa</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="buttonBox">
+        <div class="button">Hire</div>
+        <div class="button">Contact me</div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
