--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
 
     <section id="home">
-      <img src="1.jpg" alt="" />
+      <img src="1.jpg" alt="!st image" />
       <div class="infoBox">
         <h1><span>Hello, I am Banele</span></h1>
         <h3><span>Web Developer</span> based in South Africa</h3>
@@ -42,6 +42,39 @@
         <div class="button">Hire</div>
         <div class="button">Contact me</div>
       </div>
+    </section>
+
+    <section id="About">
+      <div class="aboutBox">
+        <div class="aboutInfo">
+          <h1><span>About Me</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <h2><span>Skills</span></h2>
+        <div class="skills">
+          <ul>
+            <li>
+              <span><i class="bx bx-chevron-right"></i>HTML</span>
+            </li>
+            <li>
+              <span><i class="bx bx-chevron-right"></i>CSS</span>
+            </li>
+            <li>
+              <span><i class="bx bx-chevron-right"></i>JavaScript</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <img src="2.jpg" alt="2nd image" />
     </section>
     <script src="script.js"></script>
   </body>
