Added the contact section form

--- a/index.html
+++ b/index.html
@@ -121,6 +121,26 @@
         </div>
       </div>
     </section>
+
+    <section id="contact">
+      <h1 class="header"><span>Contact</span></h1>
+      <form action="#">
+        <div class="inputBox">
+          <span>Full Name</span>
+          <input type="text" placeholder="Enter your full name!" />
+        </div>
+        <div class="inputBox">
+          <span>Your Email</span>
+          <input type="text" placeholder="Enter your Email!" />
+        </div>
+        <div class="inputBox">
+          <span>Your Message</span>
+          <input type="text" placeholder="Enter your message!" />
+        </div>
+
+        <div class="button">Submit</div>
+      </form>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
