--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -141,6 +141,46 @@
         <div class="button">Submit</div>
       </form>
     </section>
+
+    <footer>
+      <div class="leftColumn">
+        <div class="columnBox">
+          <span><i class="bx bxs-location-plus"></i></span>
+          <span>Johannesburg, South Africa</span>
+        </div>
+
+        <div class="columnBox">
+          <span><i class="bx bxs-phone"></i></span>
+          <span>+27788242728</span>
+        </div>
+
+        <div class="columnBox">
+          <span><i class="bx bxs-envelope"></i></span>
+          <span>banele.shadrack@gmail.com</span>
+        </div>
+      </div>
+      
+      
+      <div class="rightColumn">
+        <span>About my projects</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div class="socialIcons">
+          <span><i class="bx bxl-facebook-square"></i></span>
+          <span><i class="bx bxl-instagram-alt"></i></span>
+          <span><i class='bx bxl-github'></i></span>
+          <span><i class="bx bxl-linkedin-square"></i></span>
+          <span><i class='bx bxl-whatsapp-square' ></i></i></span>
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
